--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,123 @@
 * {
   box-sizing: border-box;
-  
 }
-#map {
-  width: 80%;
-  max-width: 1000px;
-  margin: 0 auto;
+
+body {
+  background: #e6e6dc;
+  color: #2a2a28;
+  font-family: neue-haas-unica, sans-serif;
+  font-weight: 200;
+}
+
+#app-container {
+  width: 95%;
+  max-width: 1400px;
+  margin: 80px auto 0;
+}
+
+/*** TITLE CARD ***/
+h1 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+/*** CURSOR TAG ***/
+#cursor-tag {
+  max-width: 400px;
+  position: absolute;
+  visibility: hidden;
+  display: grid;
+  grid-template-columns: 32px auto;
+  grid-template-rows: auto auto;
+  grid-gap: 2px 0;
+  background: #e6e6dc;
+  padding: 10px 15px;
+  box-shadow: 3px 3px #bdbdb5;
+  border-radius: 3px;
+  align-items: center;
+}
+
+#cursor-tag.active {
+  visibility: visible;
+}
+
+.tag-icon {
+  width: 16px;
+  height: 16px;
+  border-radius: 10px;
+  grid-row: 1 / span 2;
+  grid-column: 1;
+  background: red;
+  margin-left: 2px;
+
+}
+
+.district-name {
+  grid-column: 2;
+  grid-row: 1;
+  font-weight: 400;
+}
+
+.district-score {
+  font-size: 0.8rem;
+  font-weight: 400;
+  grid-column: 2;
+  grid-row: 2;
+}
+
+/*** MAP ***/
+#map-container {
+  height: 650px;
+  border: 1px solid #111;
+}
+
+#map-container rect {
+  width: 200;
+}
+
+path {
+  fill: #e6e6dc;
+  fill-rule: nonzero;
+  cursor: pointer;
+  stroke: #e6e6dc;
+  stroke-width: 3px;
+}
+
+.highlighted {
+  filter: hue-rotate(200deg);
+}
+
+/**** MAP MODE BUTTONS ****/
+#mapMode {
+  margin-top: 20px;
+}
+
+#mapMode button {
+  display: inline-block;
+  margin-right: 5px;
+  outline: none;
+  font-size: 0.8rem;
+  font-weight: 600;
+  background: none;
+  border: 2px solid #2a2a28;
+  padding: 10px 15px;
+  transition: all 0.2s;
+}
+
+#mapMode span {
+  display: inline-block;
+  margin-right: 5px;
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+#mapMode button:hover {
+  background: #2a2a28;
+  color: #e6e6dc;
+}
+
+#mapMode button.active {
+  background: #2a2a28;
+  color: #e6e6dc;
 }
