--- a/css/styles.css
+++ b/css/styles.css
@@ -15,31 +15,20 @@ body {
   margin: 80px auto 0;
 }
 
+a {
+  color: #2a2a28;
+  transition: color 0.2s;
+}
+
+a:hover {
+  color: hsl(0, 100%, 55%);
+}
+
 /*** HEADER ***/
 header {
   width: 100%;
   display: grid;
-  grid-template-columns: auto auto;
-}
-
-#credits {
-  justify-self: right;
-}
-
-#info {
-  background: none;
-  border: none;
-  color: #8a8a89;
-  font-size: 0.9rem;
-  font-weight: 600;
-  text-align: right;
-  text-decoration: underline;
-  transition: color 0.2s;
-  cursor: pointer;
-}
-
-#info:hover {
-  color: #2a2a28;
+  grid-template-columns: auto 100px;
 }
 
 h1 {
@@ -47,6 +36,64 @@ h1 {
   font-weight: 600;
   margin-bottom: 20px;
 }
+
+/*** INFO BUTTON ***/
+#info {
+  outline: none;
+  background: none;
+  border: 2px solid #2a2a28;
+  color: #2a2a28;
+  font-size: 0.9rem;
+  font-weight: 600;
+  padding: 5px 15px;
+  text-align: center;
+  /* text-decoration: underline; */
+  transition: color 0.2s;
+  cursor: pointer;
+  margin-bottom: 10px;
+  transition: all 0.2s;
+}
+
+#info:hover {
+  background: #2a2a28;
+  color: #e6e6dc;
+}
+
+/*** INFO MODAL ***/
+#info-modal {
+  display: none;
+  position: fixed;
+  width: 100%;
+  max-width: 400px;
+  background: inherit;
+  border: 2px solid #2a2a28;
+  z-index: 3;
+}
+
+#modal-content {
+  width: 95%;
+  margin: 0 auto 20px;
+  display: grid;
+  grid-template-rows: 40px auto;
+}
+
+#modal-close {
+  outline: none;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  justify-self: right;
+}
+
+#info-modal.open {
+  display: block;
+}
+
+#modal-text {
+
+}
+
 
 /*** CURSOR TAG ***/
 #cursor-tag {
@@ -59,7 +106,8 @@ h1 {
   grid-gap: 2px 0;
   background: #e6e6dc;
   padding: 10px 15px;
-  box-shadow: 3px 3px #bdbdb5;
+  /* border: 1px solid #D2D2C8; */
+  box-shadow: 3px 3px #d2d2c8;
   border-radius: 3px;
   align-items: center;
   z-index: 1;
@@ -96,7 +144,7 @@ h1 {
 /*** MAP ***/
 #map-container {
   height: 650px;
-  border: 1px solid #2a2a28;
+  border: 2px solid #D2D2C8;
   position: relative;
   /* transform: rotate(-15deg);*/
 }
@@ -153,6 +201,7 @@ footer {
   border: 2px solid #2a2a28;
   padding: 10px 15px;
   width: 210px;
+  height: 40px;
   transition: all 0.2s;
 }
 
@@ -182,7 +231,7 @@ footer {
   bottom: 120%;
   left: -2px;
   color: #2a2a28;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   font-weight: 400;
   text-align: left;
   padding: 10px 10px;
